feat(postcss-salad): 删除reset功能, 并且更改@import的依赖

--- a/src/test/features/all.expected.css
+++ b/src/test/features/all.expected.css
@@ -4,6 +4,7 @@
   -o-transition: transform 1s;
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
+  color: blue
 }
 
 @-webkit-keyframes spin {
