--- a/src/test/features/precss.css
+++ b/src/test/features/precss.css
@@ -9,7 +9,8 @@ $number: 5;
 
 $orientation: landscape;
 
-@media (min-width: $width), handheld and (orientation: $orientation) {
+@media (min-width: $width),
+handheld and (orientation: $orientation) {
   $pass: white !default;
 
   .color {
@@ -17,53 +18,61 @@ $orientation: landscape;
   }
 }
 
-@if 1 == 1 {
+@if 1==1 {
   .is-1-equal-to-1 {
     color: $pass;
   }
-} @else {
+}
+
+@else {
   .not-is-1-equal-to-1 {
     color: $fail;
   }
 }
 
-@if 1 == 2 {
+@if 1==2 {
   .is-1-equal-to-2 {
     color: $fail;
   }
-} @else {
+}
+
+@else {
   .not-is-1-equal-to-2 {
     color: $pass;
   }
 }
 
-@if $number == 1 {
+@if $number==1 {
   .is-number-equal-to-1 {
     color: $fail;
   }
-} @else {
+}
+
+@else {
   .not-number-equal-to-1 {
     color: $pass;
   }
 }
 
-@if $number == 5 {
+@if $number==5 {
   .is-number-equal-to-5 {
     color: $pass;
   }
-} @else {
+}
+
+@else {
   .not-number-equal-to-5 {
     color: $fail;
   }
 }
 
-@if 1 != 1 {
+@if 1 !=1 {
   .is-1-not-equal-to-1 {
     color: $fail;
   }
 }
 
-@if 1 != 2 {
+@if 1 !=2 {
   .is-1-not-equal-to-2 {
     color: $pass;
   }
@@ -87,55 +96,55 @@ $orientation: landscape;
   }
 }
 
-@if 1 > 0 {
+@if 1>0 {
   .is-1-greater-than-0 {
     color: $pass;
   }
 }
 
-@if 1 > 1 {
+@if 1>1 {
   .is-1-greater-than-1 {
     color: $fail;
   }
 }
 
-@if 1 > 2 {
+@if 1>2 {
   .is-1-greater-than-2 {
     color: $fail;
   }
 }
 
-@if 1 <= 0 {
+@if 1 <=0 {
   .is-1-less-than-or-equal-to-0 {
     color: $fail;
   }
 }
 
-@if 1 <= 1 {
+@if 1 <=1 {
   .is-1-less-than-or-equal-to-1 {
     color: $pass;
   }
 }
 
-@if 1 <= 2 {
+@if 1 <=2 {
   .is-1-less-than-or-equal-to-2 {
     color: $pass;
   }
 }
 
-@if 1 >= 0 {
+@if 1>=0 {
   .is-1-less-than-or-equal-to-0 {
     color: $pass;
   }
 }
 
-@if 1 >= 1 {
+@if 1>=1 {
   .is-1-less-than-or-equal-to-1 {
     color: $pass;
   }
 }
 
-@if 1 >= 2 {
+@if 1>=2 {
   .is-1-less-than-or-equal-to-2 {
     color: $fail;
   }
@@ -183,12 +192,12 @@ $orientation: landscape;
   }
 }
 
-@define-placeholder foo {
+%foo {
   background: pink;
 }
 
 .bar {
-  @extend foo;
+  @extend %foo;
 
   background-color: @color;
   color: $pass;
