--- a/src/test/features/reset.css
+++ b/src/test/features/reset.css
@@ -1,17 +1,1 @@
-.table {
-  @reset-nested tabel;
-  color: #fff;
-}
-
-td, th {
-  background-color: #fff;
-  @reset-nested tabel-cell;
-}
-
-ul, ol {
-  @reset-nested list; 
-}
-
-.regular-font {
-  @reset-nested font; 
-}
+@reset-global mobile;
