feat(postcss-salad): 添加自定义变量引用

--- a/src/test/features/all.expected.css
+++ b/src/test/features/all.expected.css
@@ -1,10 +1,15 @@
+:root {
+  --color: blue;
+}
+
 * {
   -webkit-transition: -webkit-transform 1s;
   transition: -webkit-transform 1s;
   -o-transition: transform 1s;
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
-  color: blue
+  color: blue;
+  color: var(--color)
 }
 
 @-webkit-keyframes spin {
