--- a/src/test/features/all.css
+++ b/src/test/features/all.css
@@ -1,10 +1,12 @@
 :root {
   --color: blue;
+  --size: 24;
 }
 
 * {
   transition: transform 1s;
-  color: var(--color)
+  color: var(--color);
+  font-size: calc(var(--size) * 1.5)
 }
 
 @keyframes spin {
