--- a/src/test/features/all.css
+++ b/src/test/features/all.css
@@ -1,20 +1,42 @@
-:root {
-  --color: blue;
-  --size: 24;
+@import 'variables.css';
+@import 'customProperties.css';
+@import 'mixins.css';
+@import 'autoprefixer.css';
+@import 'bem.css';
+@import 'calc.css';
+@import 'initial.css';
+@import 'inlineSvg.css';
+@import 'neat.css';
+@import 'precss.css';
+@import 'rem.css';
+@import 'reset.css';
+@import 'sassColor.css';
+@import 'shape.css';
+@import 'short.css';
+@import 'utils.css';
+
+%menu-item {
+  height: 56px;
+  line-height: 56px;
+  font-size: 14px;
+  color: var(--info);
+  padding: 0 20px;
+  cursor: pointer;
+  position: relative;
+  transition: border-color .3s, background-color .3s, color .3s;
+  box-sizing: border-box;
+  white-space: nowrap;
 }
 
-* {
-  transition: transform 1s;
-  color: var(--color);
-  font-size: calc(var(--size) * 1.5)
+.search {
+  @mixin icon search,
+  var(--primary);
+  color: var(--warning);
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg)
-  }
-
-  100% {
-    transform: rotate(360deg)
-  }
+.sass {
+  @extend %menu-item;
+  color: var(--info);
+  border-color: var(--info-test);
+  background-color: var(--info-test1)
 }
