--- a/src/test/features/all.expected.css
+++ b/src/test/features/all.expected.css
@@ -1,17 +1,21 @@
-:root {
-  --color: blue;
+h1 {
+  color: red;
 }
-
+.mixins {
+  padding-left: 16px;
+  border: 1px solid blue;
+}
+.mixins::after {
+    content: "";
+    background: url(/icons/search.png);
+  }
 * {
   -webkit-transition: -webkit-transform 1s;
   transition: -webkit-transform 1s;
   -o-transition: transform 1s;
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
-  color: blue;
-  color: var(--color)
 }
-
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -23,7 +27,6 @@
             transform: rotate(360deg)
   }
 }
-
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -34,4 +37,317 @@
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg)
   }
+}
+.u-Name, .u-Name2 {
+  color: green;
+}
+.u-sm-utilityName {
+  color: blue;
+}
+.ComponentName {
+  color: cyan;
+}
+.ComponentName.is-stateName {
+  color: crimson;
+}
+.ComponentName--modifierName {
+  color: yellow;
+}
+.ComponentName-descendentName {
+  color: navy;
+}
+.nmsp-ComponentName {
+  color: red;
+}
+html {
+  font-size: 2em
+}
+a {
+  -webkit-animation: none 0s ease 0s 1 normal none running;
+          animation: none 0s ease 0s 1 normal none running;
+  -webkit-animation: initial;
+          animation: initial;
+  background: transparent none repeat 0 0 / auto auto padding-box border-box scroll;
+  background: initial;
+  white-space: normal;
+  white-space: initial;
+}
+p {
+  background: url(/img1.png),
+              url(/img2.png);
+  background-repeat: repeat no-repeat;
+  background-repeat: initial no-repeat
+}
+/*@svg-load nav url(src/test/svgs/nav.svg) {
+  path:nth-child(2){
+    fill:#0ff
+  };
+}
+h1 {
+  background: svg-inline(nav)
+}*/
+.cnt {
+  max-width: 64em;
+  margin-left: auto;
+  margin-right: auto;
+  *zoom: 1;
+}
+.cnt:before, .cnt:after {
+  content: " ";
+  display: table;
+}
+.cnt:after {
+  clear: both;
+}
+.col2 {
+  display: block;
+  float: left;
+  margin-right: 2.35765160%;
+  width: 6.17215270%;
+}
+.col2:last-child {
+  margin-right: 0;
+}
+.color {
+  color: green;
+}
+@media (min-width: 600px), handheld and (orientation: landscape) {
+
+  .color {
+    color: green;
+  }
+}
+.is-1-equal-to-1 {
+    color: green;
+  }
+.is-1-equal-to-2 {
+    color: red;
+  }
+.is-number-equal-to-1 {
+    color: red;
+  }
+.is-number-equal-to-5 {
+    color: green;
+  }
+.is-1-less-than-2 {
+    color: green;
+  }
+.is-1-greater-than-0 {
+    color: green;
+  }
+.is-1-greater-than-1 {
+    color: red;
+  }
+.is-1-greater-than-2 {
+    color: red;
+  }
+.is-1-less-than-or-equal-to-0 {
+    color: green;
+  }
+.is-1-less-than-or-equal-to-1 {
+    color: green;
+  }
+.is-1-less-than-or-equal-to-2 {
+    color: red;
+  }
+.for-1 {
+    width: 1px;
+  }
+.for-3 {
+    width: 3px;
+  }
+.for-5 {
+    width: 5px;
+  }
+.for-6 {
+    height: 6px;
+  }
+.for-4 {
+    height: 4px;
+  }
+.for-2 {
+    height: 2px;
+  }
+.test-foo {
+    color: green;
+  }
+.test-bar {
+    color: green;
+  }
+.test-baz {
+    color: green;
+  }
+.phablet {
+          color: green;
+        }
+.phone_title {
+    width: 500px
+  }
+@media (max-width: 500px) {
+  .phone_title {
+      width: auto
+  }
+    }
+body.is_dark .phone_title {
+      color: white
+    }
+.phone img {
+    display: block;
+  }
+.bar {
+  background: pink;
+  background-color: green;
+  color: green;
+}
+.sky {
+  margin: 80px 2px 3em 100%;
+  margin: 2.5rem 2px 3em 100%;
+  color: blue;
+}
+@media screen and (min-width: 20rem) {
+  .leaf {
+    margin-bottom: 1.333rem;
+    font-size: 1.5rem;
+  }
+}
+@reset-global mobile;
+body {
+  background-color: rgb(230, 230, 230);
+}
+.rect-a {
+  width: 30px;
+  height: 50px;
+  background-color: #ff0;
+}
+.rect-b {
+  width: 30px;
+  background-color: #ff0;
+}
+.rect-c {
+  height: 50px;
+  background-color: #ff0;
+}
+.rect-d {
+  background-color: #ff0;
+}
+.rect-e {
+  width: 30px;
+  height: 50px;
+}
+.circle-a {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ff0;
+}
+.circle-b {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.triangle-a {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  border-width: 5px;
+  border-bottom-color: #ff0;
+}
+.triangle-b {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  border-width: 5px;
+  border-top-color: #ff0;
+}
+.triangle-c {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  border-width: 5px;
+  border-right-color: #ff0;
+}
+.triangle-d {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  border-width: 5px;
+  border-left-color: #ff0;
+}
+p {
+  line-height: 1.5;
+  font-size: 125%;
+  top: 1em;
+  right: 2em;
+  bottom: 3em;
+  left: 4em;
+  position: absolute;
+  width: 20px;
+  height: 10px;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+.ellipsis {
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.ellipsis2 {
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+.clearfix {
+}
+.clearfix:before, .clearfix:after {
+  display: table;
+  content: "";
+}
+.clearfix:after {
+  clear: both;
+}
+.irt {
+  font: 0/0 none;
+  text-shadow: none;
+  color: transparent;
+}
+.usn {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+.disabled {
+  background-color: #ccc;
+  border-color: #f00;
+  color: #333;
+  cursor: default;
+  pointer-events: none;
+}
+.vam-box {
+}
+.vam-box:after {
+  display: inline-block;
+  content: "";
+  height: 100%;
+  vertical-align: middle;
+}
+.search {
+  padding-left: 16px;
+  border: 1px solid blue;
+}
+.search::after {
+    content: "";
+    background: url(/icons/search.png);
+  }
+.search {
+  color: yellow;
 }
